making initial menu more dynamic

--- a/smart_home_WebApp/src/app/smart-home-menu/smart-home-menu.component.css
+++ b/smart_home_WebApp/src/app/smart-home-menu/smart-home-menu.component.css
@@ -7,7 +7,9 @@
 .mat-card-body{
     display: flex;
     float: right;    
-    flex-wrap: wrap;
+    flex-wrap: wrap;    
+}
 
-    
+h5 {
+    color: white;
 }
