--- a/smart_home_WebApp/src/app/smart-home-menu/smart-home-menu.component.html
+++ b/smart_home_WebApp/src/app/smart-home-menu/smart-home-menu.component.html
@@ -5,34 +5,17 @@
     <button mat-fab disbled aria-label="Example icon button with a home icon" style="background-color: white; color:#6FE6B0">
       <mat-icon>home</mat-icon>
     </button>
+    <h5  class="mt-4">MY SMART HOME</h5>
 </div>
-<div class="cards">
-    <a [routerLink] = "['/smartHome/lights']" >
+<div class="cards" *ngFor = "let item of _items">
+    <a [routerLink] = "item.routerLink" >
         <mat-card>
             <div class ="mat-card-body">
-                <mat-icon class="ml-5 mr-5" style="margin-right: 50px;">wb_incandescent</mat-icon>
-                <p class="ml-5 mr-5" style="margin-right: 50px;">LÂMPADAS</p>
-        
+                <mat-icon class="ml-5 mr-5" style="margin-right: 3em;">{{item.icon}}</mat-icon>
+                <p class="ml-5 mr-5" style="margin-right: 3em;">{{item.name}}</p>        
             </div>
         </mat-card>
     </a>
-    <a [routerLink] = "['/smartHome/ac']" >
-    <mat-card>
-        <div class ="mat-card-body">
-            <mat-icon class="ml-5 mr-5" style="margin-right: 50px;">ac_unit</mat-icon>
-            <p class="ml-5 mr-5" style="margin-right: 50px; float: left;">AR CONDICIONADO</p>
-        </div>
-    </mat-card>
-</a>
-<a [routerLink] = "['/smartHome/smartLock']" >
-    <mat-card>
-        <div class ="mat-card-body">
-            <mat-icon class="ml-5 mr-5" style="margin-right: 50px;">meeting_room</mat-icon>
-            <p class="ml-5 mr-5" style="margin-right: 50px;">FECHADURAS</p>
-    
-        </div>
-    </mat-card>
-</a>
 </div>
 
   
