--- a/smart_home_WebApp/src/app/smart-home-components/lights/lights.component.css
+++ b/smart_home_WebApp/src/app/smart-home-components/lights/lights.component.css
@@ -13,5 +13,6 @@ mat-card{
     display: inline-block;
     width: 50%;
     height: 50%;
-    padding-left: 8%;  
+    padding-left: 8%;
+    text-align: center
 }
