--- a/smart_home_WebApp/src/app/smart-home-components/air-conditioner/air-conditioner.component.html
+++ b/smart_home_WebApp/src/app/smart-home-components/air-conditioner/air-conditioner.component.html
@@ -41,7 +41,7 @@
                 <form>
                     <mat-form-field class="example-full-width" appearance="fill">
                         <mat-label>Temperatura</mat-label>
-                        <input type="number" name="temp" [(ngModel)]="ac.temperature" matInput placeholder="Ex. 20"
+                        <input type="number" min="16" name="temp" [(ngModel)]="ac.temperature" matInput placeholder="Ex. 20"
                             (change)="print()">
                     </mat-form-field>
                 </form>
